# NoaSci

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: Findprotobuf-c.cmake
include/: noa.h
include/private/: binary_backend.h  hdf5_backend.h
include/storage/: noa_motr.h
src/: container.c  initialization.c  metadata.c  object.c  object.proto
src/backends/: binary_backend.c  hdf5_backend.c
src/examples/: benchmarks.c  main.c  mnist_put.c
src/storage/: noa_motr.c
